# subbake

./: .gitignore  CHANGELOG.md  README-pypi.md  README.md  pyproject.toml
.github/workflows/: release.yml  testpypi.yml
examples/: subbake.toml
subbake/: __init__.py  agent.py  agent_loop.py  app.py  cancellation.py  config.py  diagnostics.py  editing.py  entities.py  file_ops.py  pipeline.py  prompts.py  runtime_options.py  series.py  storage.py  title_matching.py  transcriber.py  whisper_installer.py
subbake/agent/: __init__.py  _core.py  arg_parser.py  cancellation.py  deterministic.py  discovery.py  executor.py  intent.py  loop.py  plan.py  profile.py  session.py  session_ops.py  target.py  text_helpers.py  tool_registry.py  trace.py  ui.py  undo.py
subbake/models/: base_model.py
subbake/ui/: dashboard.py
tests/: test_agent_loop.py  test_cancellation.py  test_cli.py  test_config.py  test_dashboard.py  test_diagnostics.py  test_intent_gate.py  test_observation_summary.py  test_pipeline.py  test_transcriber.py  test_whisper_installer.py
