[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "subbake"
version = "0.3.2"
description = "LLM-powered subtitle translation CLI with batch memory and review passes."
readme = "README-pypi.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "azote", email = "231880175@smail.nju.edu.cn" },
]
keywords = [
  "agent",
  "subtitle",
  "translation",
  "cli",
  "llm",
  "srt",
  "vtt",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Localization",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.0.0",
  "prompt_toolkit>=3.0.43",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/heyifan142857/SubBake"
Repository = "https://github.com/heyifan142857/SubBake"
Issues = "https://github.com/heyifan142857/SubBake/issues"

[project.scripts]
sbake = "subbake.app:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["subbake*"]

[tool.pytest.ini_options]
pythonpath = ["."]
